--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 
-body {
-  background: #000;
-  color: #fff;
+@font-face {
+  font-family: font1;
+  src: url("../public/fonts/Lausanne-300.woff2");
+}
+
+@font-face {
+  font-family: font2;
+  src: url("../public/fonts/Lausanne-500.woff2");
 }
